--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     >
+
     <LinearLayout
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
@@ -18,8 +19,8 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:background="@drawable/iprt_white_logo"
+            android:layout_height="220dp"
+            android:background="@drawable/iprt_white_logo_land"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"/>
@@ -27,6 +28,7 @@
         <TextView
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,31 +41,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/information_main"
-                android:layout_marginRight="5dp"
+                android:layout_marginRight="10dp"
                 />
             <TextView
+
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="The Irish Penal Reform Trust (IPRT) is Ireland's leading non-governmental organisation campaigning for the rights of people in prison and the progressive reform of Irish penal policy."/>
+                android:text="The Irish Penal Reform Trust (IPRT) is Ireland's leading non-governmental organisation campaigning for the rights of people in prison and the progressive reform of Irish penal policy. \n\nEstablished in 1994, IPRT has a well-established role as an independent voice in public debate on the Irish penal system."/>
         </LinearLayout>
 
+
         <TextView
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Established in 1994, IPRT has a well-established role as an independent voice in public debate on the Irish penal system."/>
-        <TextView
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
