--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,24 +5,68 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     tools:context="ie.iprt.spentconvictioncalculator.HomeScreen">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="prison app" />
+        android:src="@drawable/home_screen_main_logo"
+        android:adjustViewBounds="true"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <ImageButton
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background__red_square"
+                android:src="@drawable/about_iprt_home_icon"
+                android:adjustViewBounds="true"
+                android:padding="12dp"
+                android:layout_marginRight="6dp"
+                android:text="About"
+                android:clickable="false" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/frame"
+                android:padding="0dp"
+                android:layout_marginRight="6dp"
+                />
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            >
+            <ImageButton
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background__red_square"
+                android:src="@drawable/form_main_sc_button"
+                android:padding="6dp"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="6dp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/frame"
+                android:layout_marginLeft="6dp"/>
 
-    <Button
-        android:text="about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="external links"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        </FrameLayout>
+    </LinearLayout>
+
+
+
     <Button
         android:text="form"
         android:onClick="onViewButtonClicked"
