--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:background="@color/white"
     tools:context="ie.iprt.spentconvictioncalculator.HomeScreen">
 
     <ImageView
@@ -15,6 +16,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/home_screen_main_logo"
         android:adjustViewBounds="true"
+        android:paddingTop="15dp"
+        android:paddingBottom="25dp"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,37 +28,39 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
-            <ImageButton
+            <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_background__red_square"
-                android:src="@drawable/about_iprt_home_icon"
+                android:background="@drawable/mission_statement_main_sc"
                 android:adjustViewBounds="true"
-                android:padding="12dp"
+                android:padding="6dp"
                 android:layout_marginRight="6dp"
-                android:text="About"
-                android:clickable="false" />
+                android:text="Mission Statement"
+                android:gravity="bottom|center"
+                />
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/frame"
-                android:padding="0dp"
                 android:layout_marginRight="6dp"
+                android:adjustViewBounds="true"
                 />
         </FrameLayout>
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <ImageButton
+            android:layout_weight="1">
+            <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_background__red_square"
-                android:src="@drawable/form_main_sc_button"
+                android:background="@drawable/form_main_sc_button"
                 android:padding="6dp"
                 android:adjustViewBounds="true"
-                android:layout_marginLeft="6dp"/>
+                android:layout_marginLeft="6dp"
+                android:onClick="onViewButtonClicked"
+                android:id="@+id/form_button_main"
+                android:text="Form"
+                android:gravity="bottom|center"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -64,22 +69,53 @@
 
         </FrameLayout>
     </LinearLayout>
-
-
-
-    <Button
-        android:text="form"
-        android:onClick="onViewButtonClicked"
-        android:id="@+id/form_button_main"
+    <!--Second Line-->
+     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="Mission Statement"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="results"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/external_links_main_scr"
+                android:adjustViewBounds="true"
+                android:padding="6dp"
+                android:layout_marginRight="6dp"
+                android:text="External Links"
+                android:gravity="bottom|center"
+                />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/frame"
+                android:layout_marginRight="6dp"
+                android:adjustViewBounds="true" />
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/about_iprt_home_icon"
+                android:padding="6dp"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="6dp"
+                android:text="About"
+                android:gravity="bottom|center"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/frame"
+                android:layout_marginLeft="6dp"/>
+
+        </FrameLayout>
+    </LinearLayout>
 
 </LinearLayout>
