--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="hint_grey">#d3d3d3</color>
     <color name="red">#DC2200</color>
+    <color name="white">#FFFFFF</color>
 </resources>
