--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -6,14 +6,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ie.iprt.spentconvictioncalculator.FormActivity">
     <LinearLayout
-
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/home_screen_main_logo"
+            android:adjustViewBounds="true"
+            android:paddingTop="15dp"
+            android:paddingBottom="25dp"
+            />
 
 
         <TextView
