--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#DC2200</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="cream">#fdffd9</color>
 </resources>
