changed the main image

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/home_screen_main_logo"
+        android:src="@drawable/iprt_white_logo"
         android:adjustViewBounds="true"
         android:paddingTop="15dp"
         android:paddingBottom="25dp"
@@ -114,6 +114,7 @@
                 android:background="@color/transparent"
                 android:id="@+id/external_links"
                 android:layout_marginBottom="8dp"
+                android:onClick="onExternalLinksActivity"
                 />
         </FrameLayout>
         <FrameLayout
