--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
         tools:context="ie.iprt.spentconvictioncalculator.FormActivity"
@@ -21,13 +22,16 @@
             android:paddingTop="15dp"
             android:paddingBottom="25dp"
             />
+
+
         <TextView
+            android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="20dp"
-            android:layout_marginTop="50dp"
+            android:textSize="15dp"
+
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
+
             android:id="@+id/resultsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
